# DetailIdentifier

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
buildsystem/: library_support.cmake  utilities.cmake
dependency_hacks/: OpenCV linking problems.txt  Potrace_CMakeLists.txt
executable/: CMakeLists.txt  main.cpp
executor/: CMakeLists.txt
production/: CMakeLists.txt
production/include/: di_assert.h
production/include/common/: basic_configuration.h  interpreter_interface_types.h  modeller_interface_types.h  preprocessor_interface_types.h  vectorizer_interface_types.h
production/include/executor/: application.h  configuration.h  configurator.h  exceptions.h  executor.h  os_proxy.h  processor.h  version.h
production/include/interpreter/: centerline_tracer.h  clusterer.h  configuration.h  interpreter.h  projection.h
production/include/interpreter/svg/: document.h  edge.h  location.h  path.h  point.h  reader.h  segment.h
production/include/logger/: command_line_logger.h  logger.h
production/include/modeller/: configuration.h  modeller.h
production/include/preprocessor/: configuration.h  options.h  preprocessor.h
production/include/vectorizer/: configuration.h  exceptions.h  options.h  vectorizer.h
production/libs/: CMakeLists.txt
production/libs/dxflib/: CMakeLists.txt
production/libs/fog/: CMakeLists.txt
production/libs/fog/Fog/Src/Fog/Core/C++/: ConfigCMake.h
production/libs/juce/: AppConfig.h  CMakeLists.txt  JuceHeader.h
production/libs/juce/juce-3.0.8/: ReadMe.txt
production/libs/libboard/: CMakeLists.txt
production/libs/libboard/libboard/: CMakeLists.txt
production/libs/potrace/: CMakeLists.txt
production/libs/pugixml/: CMakeLists.txt
production/libs/qgar/: CMakeLists.txt
production/libs/voronoi/voronoi/: AUTHORS  CMakeLists.txt  INSTALL  test_voronoi.cpp  timer.h
production/libs/waffles/: CMakeLists.txt
production/subsystems/: CMakeLists.txt
production/subsystems/common/: CMakeLists.txt  basic_configuration.cpp
production/subsystems/executor/: CMakeLists.txt  application.cpp  configuration.cpp  configurator.cpp  exceptions.cpp  executor.cpp  os_proxy.cpp  processor.cpp
production/subsystems/interpreter/: .interpreter.cpp.swp  CMakeLists.txt  centerline_tracer.cpp  clusterer.cpp  configuration.cpp  interpreter.cpp  projection.cpp
production/subsystems/interpreter/svg/: document.cpp  edge.cpp  location.cpp  point.cpp  reader.cpp  segment.cpp
production/subsystems/logger/: CMakeLists.txt  command_line_logger.cpp
production/subsystems/modeller/: CMakeLists.txt  configuration.cpp  modeller.cpp
production/subsystems/preprocessor/: CMakeLists.txt  configuration.cpp  options.cpp  preprocessor.cpp
production/subsystems/vectorizer/: CMakeLists.txt  configuration.cpp  exceptions.cpp  options.cpp  vectorizer.cpp
tests/: .CMakeLists.txt.swp  CMakeLists.txt
tests/doubles/: interpreter_mock.h  logger_mock.h  modeller_mock.h  os_proxy_mock.h  preprocessor_mock.h  vectorizer_mock.h
tests/files/: minimal_complete_configuration.ini
tests/files/interpreter/line_interpretation/: advanced.pgm  interpretation.pgm
tests/files/vectorizer/: in_sanity.pgm
tests/files/workspace/: vectorized.dxf  vectorized.pgm
tests/helpers/: main.cpp  minimal_configuration.cpp  minimal_configuration.h  simple_configuration.cpp  simple_configuration.h  svg_data.h  svg_helpers.cpp  svg_helpers.h  svg_input_paths.h  system_helpers.cpp  system_helpers.h  unique_ptr_verifiers.h
tests/testcases/executor/: basic_processing_pipeline.cpp  os_proxy_tests.cpp
tests/testcases/interpreter/: centerline_tracer_sanity.cpp  clusterer_sanity.cpp  interpreter_sanity.cpp  svg_reader_sanity.cpp
tests/testcases/preprocessor/: preprocessor_sanity.cpp
tests/testcases/vectorizer/: vectorizer_sanity.cpp
