CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME detail_identifier)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${ROOT_DIR}/executable)

FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} preprocessor vectorizer interpreter modeller executor ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
