CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(TestSelector)

SET(PRODUCTION_DIR ${ROOT_DIR}/production)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include PARENT_SCOPE)

ADD_SUBDIRECTORY(libs)
ADD_SUBDIRECTORY(subsystems)
MESSAGE("-- Production code directory: " ${PRODUCTION_DIR})
