CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(LIBRARIES)

SET(LIBRARIES_BASE_DIR ${PRODUCTION_DIR}/libs)

ADD_SUBDIRECTORY(potrace)
ADD_SUBDIRECTORY(libboard)

SET(POTRACE_INCLUDE_DIR ${POTRACE_INCLUDE_DIR} PARENT_SCOPE)
SET(LIBBOARD_INCLUDE_DIR ${LIBBOARD_INCLUDE_DIR} PARENT_SCOPE)