CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(DetailIdentifier)

INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})

ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(common)

SET(COMMON_LIBRARIES logger common)

ADD_SUBDIRECTORY(preprocessor)
ADD_SUBDIRECTORY(vectorizer)
ADD_SUBDIRECTORY(interpreter)
ADD_SUBDIRECTORY(modeller)

SET(INTERNAL_LIBRARIES ${COMMON_LIBRARIES} preprocessor vectorizer interpreter modeller)

ADD_SUBDIRECTORY(executor)

SET(INTERNAL_LIBRARIES ${INTERNAL_LIBRARIES} executor PARENT_SCOPE)
