CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(libboard)

SET(CODE_DIR ${LIBRARIES_BASE_DIR}/dxflib/dxflib-3.3.4-src/src)

SET(DXFLIB_INCLUDE_DIR ${CODE_DIR} PARENT_SCOPE)

FILE (GLOB HEADERS ${CODE_DIR}/*.h)
FILE (GLOB SOURCES ${CODE_DIR}/*.cpp)

ADD_LIBRARY(dxflib ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(dxflib PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
	
SET_PROPERTY(TARGET dxflib PROPERTY FOLDER "libs")

GET_PROPERTY(DXFLIB_LOCATION TARGET dxflib PROPERTY LOCATION)
MESSAGE(STATUS "dxflib location location = ${DXFLIB_LOCATION}")