CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(libboard)

SET(FOG_BUILD_NOTHING FALSE)
SET(FOG_BUILD_STATIC FALSE)
SET(FOG_BUILD_BENCH FALSE)

ADD_SUBDIRECTORY(Fog)

IF(FOG_BUILD_EXAMPLES)
    SET(FOG_EXAMPLES 
      FogBlend
      FogGradient
      FogGroup
      FogTest
      FogSvg)

	FOREACH( EXAMPLE ${FOG_EXAMPLES} )
	  SET_PROPERTY(TARGET ${EXAMPLE} PROPERTY FOLDER "libs/Fog/examples")
	  SET_PROPERTY(TARGET ${EXAMPLE} PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples/Fog")
      SET_TARGET_PROPERTIES(${EXAMPLE} PROPERTIES COMPILE_FLAGS "/w") # disable warnings, we won't do anything with them anyway
	ENDFOREACH(EXAMPLE)
ENDIF(FOG_BUILD_EXAMPLES)

IF(MSVC)
    SET_TARGET_PROPERTIES(Fog PROPERTIES COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE")
    SET_TARGET_PROPERTIES(Fog PROPERTIES COMPILE_FLAGS "/w") # disable warnings, we won't do anything with them anyway
ENDIF(MSVC)

SET_TARGET_PROPERTIES(Fog PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

SET_PROPERTY(TARGET Fog PROPERTY FOLDER "libs/Fog")

GET_PROPERTY(FOG_LOCATION TARGET Fog PROPERTY LOCATION)
MESSAGE(STATUS "Fog library location = ${FOG_LOCATION}")

SET(FOG_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/fog/Fog/Src PARENT_SCOPE)
SET(FOG_LIBRARIES Fog PARENT_SCOPE)