CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(juce)

IF(NOT DEFINED JUCE_ROOT)
    SET(JUCE_ROOT $ENV{JUCE_ROOT})
ENDIF()

IF(NOT DEFINED JUCE_ROOT)
  MESSAGE(FATAL_ERROR "Could not find JUCE_ROOT."
  "You need to set JUCE_ROOT environment variable to path where JUCE library is downloaded."
  "JUCE can be downloaded for free from http://www.juce.com/") 
ENDIF()

MESSAGE(STATUS "Using JUCE code from: " ${JUCE_ROOT})

SET(JUCE_INCLUDE_DIRS "")

FUNCTION(ADD_JUCE_LIBRARY LIBNAME)
    SET(LIBRARY_NAME ${LIBNAME})

	SET(JUCE_MODULE_INCLUDES ${JUCE_ROOT}/modules/${LIBRARY_NAME})
    SET(JUCE_INCLUDE_DIRS "${JUCE_INCLUDE_DIRS} ${JUCE_MODULE_INCLUDES}")

	SET(JUCE_ACTUALLY_COMPILED_FILE ${JUCE_MODULE_INCLUDES}/${LIBRARY_NAME}.cpp)
	SET(JUCE_ACTUAL_TOTAL_INCLUDE ${JUCE_MODULE_INCLUDES}/${LIBRARY_NAME}.h)

	FILE(GLOB JUCE_MODULE_INCLUDED_CPPS ${JUCE_ROOT}/modules/${LIBRARY_NAME}/*/*.cpp)
	FILE(GLOB JUCE_MODULE_REAL_INCLUDES ${JUCE_ROOT}/modules/${LIBRARY_NAME}/*/*.h)

	SOURCE_GROUP(include_cpps FILES ${JUCE_MODULE_INCLUDED_CPPS})
	SET_PROPERTY(SOURCE ${JUCE_MODULE_INCLUDED_CPPS} PROPERTY HEADER_FILE_ONLY TRUE)

	INCLUDE_DIRECTORIES(${JUCE_ROOT})
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

	ADD_LIBRARY(${LIBRARY_NAME} ${JUCE_MODULE_INCLUDED_CPPS} ${JUCE_ACTUALLY_COMPILED_FILE} ${JUCE_MODULE_REAL_INCLUDES} ${JUCE_ACTUAL_TOTAL_INCLUDE})
	
	SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
		LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
		ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
		
	SET_PROPERTY(TARGET ${LIBRARY_NAME} PROPERTY FOLDER "libs/juce")
ENDFUNCTION(ADD_JUCE_LIBRARY NAME)

SET(JUCE_TARGETS juce_core juce_graphics juce_events)

FOREACH(LIBRARY ${JUCE_TARGETS})
    ADD_JUCE_LIBRARY(${LIBRARY})
ENDFOREACH(LIBRARY)

SET(JUCE_INCLUDE_DIRS ${JUCE_INCLUDE_DIRS} PARENT_SCOPE)
MESSAGE(STATUS "Using JUCE libraries: ${JUCE_TARGETS}")