CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(libboard)

SET(MYPROJ_RAN_ONCE ON)
ADD_SUBDIRECTORY(libboard)

SET(TARGETS board board-dynamic)
SET(LIBBOARD_INCLUDE_DIR libboard/include PARENT_SCOPE)

SET_TARGET_PROPERTIES(${TARGETS} PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

SET_PROPERTY(TARGET board-dynamic PROPERTY FOLDER "libs/libboard/board-dynamic")
SET_PROPERTY(TARGET board PROPERTY FOLDER "libs/libboard/board")

IF(DEFINED WITH_LIBBOARD_EXAMPLES AND WITH_LIBBOARD_EXAMPLES EQUAL ON)
	FOREACH( EXAMPLE logo example1 example2 example3 example4
		arithmetic ellipse graph arrows  ruler koch clipping
		flag scale_ellipse line_style )
	  SET_PROPERTY(TARGET ${EXAMPLE} PROPERTY FOLDER "libs/libboard/examples/${EXAMPLE}")
	  SET_PROPERTY(TARGET ${EXAMPLE} PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples/libboard")
	ENDFOREACH(EXAMPLE)
ENDIF(DEFINED WITH_LIBBOARD_EXAMPLES AND WITH_LIBBOARD_EXAMPLES EQUAL ON)

GET_PROPERTY(BOARD_LOCATION TARGET board PROPERTY LOCATION)
GET_PROPERTY(BOARD_DYNAMIC_LOCATION TARGET board-dynamic PROPERTY LOCATION)
MESSAGE(STATUS "Libboard location = ${BOARD_LOCATION}")
MESSAGE(STATUS "Libboard-dynamic location = ${BOARD_DYNAMIC_LOCATION}")