# Tested only under MSVC 2013 & Potrace 1.11 

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME potrace)
PROJECT(${PROJECT_NAME})

SET(ROOT_DIR ${LIBRARIES_BASE_DIR}/potrace/potrace-1.11)
SET(CODE_DIR ${ROOT_DIR}/src)

FILE (GLOB HEADERS ${CODE_DIR}/*.h)
FILE (GLOB SOURCES ${CODE_DIR}/*.c)

INCLUDE_DIRECTORIES(${CODE_DIR})

LIST(REMOVE_ITEM SOURCES ${CODE_DIR}/mkbitmap.c)
LIST(REMOVE_ITEM SOURCES ${CODE_DIR}/main.c)
LIST(REMOVE_ITEM SOURCES ${CODE_DIR}/potracelib_demo.c)
LIST(REMOVE_ITEM HEADERS ${CODE_DIR}/main.h)

ADD_DEFINITIONS(-DHAVE_STRING_H=1)
ADD_DEFINITIONS(-DPOTRACE="\\"Potrace\\"")
ADD_DEFINITIONS(-DVERSION="\\"1.11\\"")
ADD_DEFINITIONS(-DMKBITMAP="\\"MkBitmap\\"")

ADD_LIBRARY(potracelib ${SOURCES} ${HEADERS})

ADD_EXECUTABLE(potrace ${CODE_DIR}/main.c ${CODE_DIR}/main.h)  
ADD_EXECUTABLE(potrace_demo ${CODE_DIR}/potracelib_demo.c)  
ADD_EXECUTABLE(mkbitmap ${CODE_DIR}/mkbitmap.c)  

SET(TARGETS potrace potrace_demo mkbitmap potracelib)

ADD_DEPENDENCIES(mkbitmap potracelib)
ADD_DEPENDENCIES(potrace_demo potracelib mkbitmap)
ADD_DEPENDENCIES(potrace potracelib mkbitmap)

TARGET_LINK_LIBRARIES(potrace potracelib)
TARGET_LINK_LIBRARIES(potrace_demo potracelib)
TARGET_LINK_LIBRARIES(mkbitmap potracelib)
	
IF(MSVC)
    SET_TARGET_PROPERTIES(${TARGETS} PROPERTIES COMPILE_DEFINITIONS "inline=__inline;strncasecmp=_strnicmp;strcasecmp=_stricmp;strdup=_strdup;_USE_MATH_DEFINES;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE")
    SET_TARGET_PROPERTIES(${TARGETS} PROPERTIES COMPILE_FLAGS "/wd4146")
ENDIF(MSVC)


SET_TARGET_PROPERTIES(${TARGETS} PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(${TARGETS} PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

GET_PROPERTY(Potrace_location TARGET potrace PROPERTY LOCATION)
GET_PROPERTY(Mkbitmap_location TARGET mkbitmap PROPERTY LOCATION)
MESSAGE(STATUS "Potrace executable location = ${Potrace_location}")
MESSAGE(STATUS "Mkbitmap executable location = ${Mkbitmap_location}")