CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME pugixml)

PROJECT(${PROJECT_NAME})

SET(FILE_RELATIVE_PATH pugixml_head/src)

SET(PUGIXML_DIR ${LIBRARIES_BASE_DIR}/${PROJECT_NAME}/${FILE_RELATIVE_PATH})

FILE (GLOB SOURCES ${PUGIXML_DIR}/*.cpp)
FILE (GLOB HEADERS ${PUGIXML_DIR}/*.hpp)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
	
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER "libs")
SET(PUGIXML_INCLUDE_DIR ${PUGIXML_DIR} PARENT_SCOPE)
SET(PUGIXML_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)

MESSAGE(STATUS "sources: ${SOURCES}")
MESSAGE(STATUS "Using pugixml includes from: " ${PUGIXML_DIR})

GET_PROPERTY(PUGIXML_LOCATION TARGET pugixml PROPERTY LOCATION)
MESSAGE(STATUS "Pugixml library location = ${PUGIXML_LOCATION}")