CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME waffles)

PROJECT(${PROJECT_NAME})

SET(FILE_RELATIVE_PATH waffles/src)
SET(WAFFLES_DIR ${LIBRARIES_BASE_DIR}/${PROJECT_NAME}/${FILE_RELATIVE_PATH})
SET(TARGET_NAME GClasses)

ADD_SUBDIRECTORY(${WAFFLES_DIR}/${TARGET_NAME})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
	
SET_PROPERTY(TARGET ${TARGET_NAME} PROPERTY FOLDER "libs")
SET(WAFFLES_INCLUDE_DIR ${WAFFLES_DIR} PARENT_SCOPE)
SET(WAFFLES_LIBRARIES ${TARGET_NAME} PARENT_SCOPE)

MESSAGE(STATUS "Using Waffles includes from: " ${WAFFLES_DIR})
