CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME modeller)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME})

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.h)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR}})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})
