CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME vectorizer)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME})

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.h)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

GET_PROPERTY(POTRACE_EXECUTABLE GLOBAL PROPERTY POTRACE_EXECUTABLE_NAME)
GET_PROPERTY(MKBITMAP_EXECUTABLE GLOBAL PROPERTY MKBITMAP_EXECUTABLE_NAME)

ADD_DEFINITIONS(-DDEFAULT_POTRACE_EXECUTABLE_NAME="${POTRACE_EXECUTABLE}")
ADD_DEFINITIONS(-DDEFAULT_POTRACE_EXECUTABLE_NAME_STRING=std::string\("${POTRACE_EXECUTABLE}"\))
ADD_DEFINITIONS(-DDEFAULT_MKBITMAP_EXECUTABLE_NAME="${MKBITMAP_EXECUTABLE}")
ADD_DEFINITIONS(-DDEFAULT_MKBITMAP_EXECUTABLE_NAME_STRING=std::string\("${MKBITMAP_EXECUTABLE}"\))

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})
